# BSC-FGI_Scheduler

./: .gitignore  BSC_FGI_Scheduler.ipynb  BSC_FGI_Scheduler_clean.ipynb  FGI_liveState.xlsx  README.md  analyze_scheduler_output.ipynb  data_import.ipynb  move_time_estimation.ipynb  requirements.txt  scheduler_trace_output.xlsx  ~$scheduler_trace_output.xlsx
data/raw/: Nodes.xlsx  (+3 more)
documentation/: data_dictionary.md  model_outputs_and_interpretation.md  pycode_incorporation.md  pycode_testing_and_validation.md  rate_simulation_run_conditions.md  repository_handoff_status.md  requirements.txt
input/: FGI_Locations_wPriority.xlsx  FGI_Staffing_By_Shift.xlsx  Nodes.xlsx  adjusted_location_move_times.xlsx  location_move_times.xlsx  move_time_estimation.xlsx  paint_schedules.xlsx
jupyter notebooks/: BSC_FGI_Scheduler.ipynb  analyze_scheduler_output.ipynb  data_import.ipynb
notebooks/: data_import.ipynb  move_time_estimation.ipynb
output/: FGI_liveState.xlsx  location_move_times.xlsx  location_move_times_calibrated.xlsx  location_move_times_linear_calibrated.xlsx  monthly_btg_control_charts_plotly.html  (+2 more)
pycode/: .coverage  pyproject.toml
pycode/src/bsc_fgi_scheduler/: __init__.py  ap.py  config.py  constants.py  control_charts.py  data_import.py  dataframes.py  export.py  fgi.py  location.py  paths.py  rate_simulations.py  scheduler.py  trace.py  validation.py
pycode/tests/: conftest.py  test_ap.py  test_compass_logic.py  test_data_import_smoke.py  test_exit_logic.py  test_export_smoke.py  test_fgi_queues.py  test_imports.py  test_location.py  test_paint_logic.py
(+14 files in other folders)
