[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsc-fgi-scheduler"
version = "0.1.0"
description = "Modular Python package mirroring the BSC FGI Scheduler notebooks"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "matplotlib",
    "scikit-learn",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
